# apirel

./: .gitignore  CONTRIBUTORS.txt  Cargo.toml  LICENSE  Pipfile  README.rst  manage.py  setup.cfg
.envs/.local/: .postgres
.github/workflows/: ci.yml
apirel/: conftest.py
apirel/templates/: base.html
apirel/users/: admin.py  apps.py  models.py  urls.py
apps/api/: Cargo.toml
config/: api_router.py  asgi.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: Makefile  conf.py  howto.rst  index.rst  make.bat  users.rst
libs/domains/: Cargo.toml
migration/: Cargo.toml
migration/src/: lib.rs  m20230208_000001_create_user_table.rs  m20230228_192033_create_association_table.rs  m20230228_222234_add_association_lock_relations.rs
requirements/: base.txt  local.txt
src/: main.rs  schema.rs
src/entities/: association.rs  mod.rs  prelude.rs  spatial_ref_sys.rs  us_gaz.rs  us_lex.rs  us_rules.rs  user.rs
src/live_db_entities/: association_association.rs  association_association_logs.rs  auth_group.rs  auth_group_permissions.rs  auth_permission.rs  authtoken_token.rs  character_attack.rs  character_background.rs  character_background_features.rs  character_background_languages.rs  character_background_skill_proficiencies.rs  character_bond.rs  character_character.rs  character_character_feats.rs  character_character_features_and_traits.rs  character_character_proficiencies.rs  character_characterclass.rs  character_characterclass_proficiencies.rs  character_classandlevel.rs  character_feat.rs  character_feature.rs  (+50 more)
(+17 files in other folders)
