[package]
name = "apirel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "4.0"
actix-web = "4"
async-graphql-actix-web = "4.0"
serde_json = "1.0"
# tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# [dev-dependencies]
# reqwest = "0.11"
