[package]
name = "apirel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.0.1", default-features = false, features = [
    "macros",
] }
async-graphql = "4.0"
async-graphql-actix-web = "4.0"
dotenvy = "0.15"
# futures = "0.3.21"
http = "0.2"
sea-orm = { version = "0.10", features = [
    "sqlx-postgres",
    "runtime-actix-rustls",
    "macros",
    "mock",
    "with-chrono",
    "with-json",
    "postgres-array",
] }
serde_json = "1.0"
tokio = { version = "1.0.2", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
